More sensible data structures.

--- a/test.tex
+++ b/test.tex
@@ -5,7 +5,7 @@
 \begin{document}
 \maketitle
 \section*{Introduction}
-This is a test article.  It is a   \LaTeX ~document generated through C++.  Below is an example image.
+This is a test article.  It is a                \LaTeX ~document generated through C++.  Below is an example image.Here is some more text.
 \section*{Details}
 \begin{center}\begin{tikzpicture}\draw[thick,black] (0.000000,0.000000) -- (0.005000,0.000000);
 \draw[thick,black] (0.005000,0.000000) -- (0.010000,0.000000);
