Modern memory management.

--- a/test.tex
+++ b/test.tex
@@ -1,11 +1,12 @@
 \documentclass[11pt]{article}
 \usepackage{tikz}
+\usepackage{amsmath}
 \title{My Test Document}
 \author{Test Author}
 \begin{document}
 \maketitle
 \section*{Introduction}
-This is a test article.  It is a                \LaTeX ~document generated through C++.  Below is an example image.Here is some more text.
+This is a test article.  It is a                 \LaTeX ~document generated through C++.  Below is an example image.Here is some more text.
 \section*{Details}
 \begin{center}\begin{tikzpicture}\draw[black] (0.000000,0.000000) -- (5.000000,0.000000);
 \draw[black] (0.000000,0.000000) -- (0.000000,2.000000);
