--- a/test.tex
+++ b/test.tex
@@ -12589,9 +12589,9 @@ This is the 3th item.
 This is the 4th item.
 \end{enumerate}
 
-Finally, here is a table: \\\begin{tabular}{||c|c|c||}
+Finally, here is a table: \\\begin{center}\begin{tabular}{||c|c|c||}
 \hline r11 & r12 & r13\\ 
 r21 & r22 & r23\\ 
 \hline \end{tabular}
-
+\end{center}
 \end{document}
